--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_weight="1"
             android:backgroundTint="@android:color/white"
             android:text="@string/app_search"
-            android:textSize="20sp"
+            android:textSize="@dimen/main_Text_Size"
             android:textColor="@color/black"
             app:cornerRadius="20dp"
             app:iconTint="@color/black"
@@ -55,7 +55,7 @@
             android:layout_weight="1"
             android:backgroundTint="@android:color/white"
             android:text="@string/app_library"
-            android:textSize="20sp"
+            android:textSize="@dimen/main_Text_Size"
             android:textColor="@color/black"
             app:cornerRadius="20dp"
             app:iconTint="@color/black"
@@ -71,7 +71,7 @@
             android:layout_weight="1"
             android:backgroundTint="@android:color/white"
             android:text="@string/app_settings"
-            android:textSize="20sp"
+            android:textSize="@dimen/main_Text_Size"
             android:textColor="@color/black"
             app:cornerRadius="20dp"
             app:iconTint="@color/black"
