--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -57,7 +57,7 @@
             android:text="@string/app_dark_style"
             android:textColor="@color/black"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/setting_Text_Size"
             android:gravity="start"
             app:iconTint="@color/grey"
             app:icon="@drawable/track"
@@ -71,7 +71,7 @@
             android:text="@string/app_share"
             android:textColor="@color/black"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/setting_Text_Size"
             android:gravity="start"
             app:iconTint="@color/grey"
             app:icon="@drawable/share"
@@ -84,7 +84,7 @@
             android:text="@string/app_mail_Support"
             android:textColor="@color/black"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/setting_Text_Size"
             android:gravity="start"
             app:iconTint="@color/grey"
             app:icon="@drawable/support"
@@ -97,7 +97,7 @@
             android:text="@string/app_arrow_forward"
             android:textColor="@color/black"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/setting_Text_Size"
             android:gravity="start"
             app:iconTint="@color/grey"
             app:icon="@drawable/arrow_forward"
