--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,82 +3,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#3772E7"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:text="@string/app_name"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:paddingBottom="24dp"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </FrameLayout>
 
-
-    <LinearLayout
+    <Button
+        android:id="@+id/searchButton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="33dp"
-        android:orientation="vertical"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/searchB"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/white"
-            android:text="@string/app_search"
-            android:textSize="@dimen/main_Text_Size"
-            android:textColor="@color/black"
-            app:cornerRadius="20dp"
-            app:iconTint="@color/black"
-            app:icon="@drawable/search"
-            app:iconGravity="textStart"
-            android:textAllCaps="false"
-            />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:backgroundTint="@android:color/white"
+        android:text="@string/app_search"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/main_text_size"
+        app:cornerRadius="@dimen/activity_main_radius_size"
+        app:icon="@drawable/search"
+        app:iconGravity="textStart"
+        app:iconTint="@color/black" />
 
 
-        <Button
-            android:id="@+id/libraryB"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/white"
-            android:text="@string/app_library"
-            android:textSize="@dimen/main_Text_Size"
-            android:textColor="@color/black"
-            app:cornerRadius="20dp"
-            app:iconTint="@color/black"
-            app:icon="@drawable/library"
-            app:iconGravity="textStart"
-            android:textAllCaps="false"
-            />
+    <Button
+        android:id="@+id/libraryButton"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:backgroundTint="@android:color/white"
+        android:text="@string/app_library"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/main_text_size"
+        app:cornerRadius="@dimen/activity_main_radius_size"
+        app:icon="@drawable/library"
+        app:iconGravity="textStart"
+        app:iconTint="@color/black" />
 
-        <Button
-            android:id="@+id/settingB"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="@android:color/white"
-            android:text="@string/app_settings"
-            android:textSize="@dimen/main_Text_Size"
-            android:textColor="@color/black"
-            app:cornerRadius="20dp"
-            app:iconTint="@color/black"
-            app:icon="@drawable/settings"
-            app:iconGravity="textStart"
-            android:textAllCaps="false"
-            />
+    <Button
+        android:id="@+id/settingButton"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:backgroundTint="@android:color/white"
+        android:text="@string/app_settings"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/main_text_size"
+        app:cornerRadius="@dimen/activity_main_radius_size"
+        app:icon="@drawable/settings"
+        app:iconGravity="textStart"
+        app:iconTint="@color/black" />
 
-    </LinearLayout>
 </LinearLayout>
