--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="setting_text_size">16sp</dimen>
     <dimen name="activity_main_radius_size">20dp</dimen>
     <dimen name="activity_setting_layout_height">60dp</dimen>
+    <dimen name="activity_setting_padding_left">12dp</dimen>
 </resources>
