Добавил стили, шрифт теперь как на примере

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/white"
+        style="@style/SettingBackgroundStyle"
         android:orientation="vertical"
         android:padding="2dp">
 
@@ -18,14 +18,12 @@
             android:layout_height="48dp">
 
             <Button
+                style="@style/SettingBackgroundStyle"
                 android:id="@+id/backSettings"
                 android:layout_width="48dp"
                 android:layout_height="match_parent"
-                android:backgroundTint="@color/white"
                 app:icon="@drawable/arrow_back"
-                app:iconTint="@color/black"
-                android:paddingLeft="16dp"
-                style="@style/Widget.MaterialComponents.Button.TextButton"/>
+                android:paddingLeft="16dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -34,9 +32,12 @@
                 android:layout_gravity="left"
                 android:paddingLeft="60dp"
                 android:text="@string/app_settings"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                style="@style/SettingTextVievStyle"
+                android:textAllCaps="false"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/ys_display_medium"
+                android:textFontWeight="500" />
         </RelativeLayout>
 
         <LinearLayout
@@ -53,65 +54,31 @@
                 android:paddingLeft="12dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="@string/app_dark_style"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/setting_text_size"
-                    android:textStyle="bold" />
+                    style="@style/SettingSwitchTextStyle"
+                    android:text="@string/app_dark_style" />
 
                 <Switch
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"
+                    app:iconTint="@color/blue"
+                    />
             </FrameLayout>
 
-
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_setting_layout_height"
-                android:backgroundTint="@color/white"
-                android:gravity=""
                 android:text="@string/app_share"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/setting_text_size"
-                android:padding="@dimen/activity_setting_padding_left"
-                app:icon="@drawable/share"
-                app:iconGravity="end"
-                app:iconTint="@color/grey"
-                style="@style/Widget.MaterialComponents.Button.TextButton"/>
+                style="@style/SettingBottomStyle"
+                app:icon="@drawable/share" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_setting_layout_height"
-                android:backgroundTint="@color/white"
-                android:gravity=""
                 android:text="@string/app_mail_support"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/setting_text_size"
-                android:padding="@dimen/activity_setting_padding_left"
-                app:icon="@drawable/support"
-                app:iconGravity="end"
-                app:iconTint="@color/grey"
-                style="@style/Widget.MaterialComponents.Button.TextButton"/>
+                style="@style/SettingBottomStyle"
+                app:icon="@drawable/support" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_setting_layout_height"
-                android:backgroundTint="@color/white"
-                android:gravity=""
                 android:text="@string/user_licence"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/setting_text_size"
-                android:padding="@dimen/activity_setting_padding_left"
-                app:icon="@drawable/arrow_forward"
-                app:iconGravity="end"
-                app:iconTint="@color/grey"
-                style="@style/Widget.MaterialComponents.Button.TextButton"/>
+                style="@style/SettingBottomStyle"
+                app:icon="@drawable/arrow_forward" />
 
         </LinearLayout>
     </LinearLayout>
