--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3772E7"
+    style="@style/ActivityBackgroundStyle"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -25,48 +25,20 @@
 
     <Button
         android:id="@+id/searchButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:backgroundTint="@android:color/white"
         android:text="@string/app_search"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/main_text_size"
-        app:cornerRadius="@dimen/activity_main_radius_size"
-        app:icon="@drawable/search"
-        app:iconGravity="textStart"
-        app:iconTint="@color/black" />
-
+        style="@style/ActivityBottomTextStyle"
+        app:icon="@drawable/search" />
 
     <Button
         android:id="@+id/libraryButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:backgroundTint="@android:color/white"
         android:text="@string/app_library"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/main_text_size"
-        app:cornerRadius="@dimen/activity_main_radius_size"
-        app:icon="@drawable/library"
-        app:iconGravity="textStart"
-        app:iconTint="@color/black" />
+        style="@style/ActivityBottomTextStyle"
+        app:icon="@drawable/library" />
 
     <Button
         android:id="@+id/settingButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:backgroundTint="@android:color/white"
         android:text="@string/app_settings"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/main_text_size"
-        app:cornerRadius="@dimen/activity_main_radius_size"
-        app:icon="@drawable/settings"
-        app:iconGravity="textStart"
-        app:iconTint="@color/black" />
+        style="@style/ActivityBottomTextStyle"
+        app:icon="@drawable/settings" />
 
 </LinearLayout>
