--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:backgroundTint">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/yp_black</item>
         <item name="android:textSize">22sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -17,38 +17,36 @@
     <style name="SettingBottomStyle" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">60dp</item>
-        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:backgroundTint">@color/yp_black</item>
         <item name="android:gravity"></item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:padding">12dp</item>
         <item name="iconGravity">end</item>
-        <item name="iconTint">@color/grey</item>
+        <item name="iconTint">@color/white</item>
     </style>
     <style name="SettingSwitchTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
     </style>
     <style name="ActivityBackgroundStyle">
-        <item name="android:background">@color/blue</item>
+        <item name="android:background">@color/yp_black</item>
     </style>
     <style name="SettingBackgroundStyle" parent="Widget.MaterialComponents.Button.TextButton">
-        <item name="android:background">@color/white</item>
-        <item name="android:backgroundTint">@color/white</item>
-        <item name="iconTint">@color/yp_black</item>
-        <item name="android:textColor">@color/yp_black</item>
+        <item name="android:background">@color/yp_black</item>
+        <item name="android:backgroundTint">@color/yp_black</item>
+        <item name="iconTint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="SettingTextVievStyle">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
-
-
 </resources>
