--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#AEAFB4</color>
+    <color name="yp_black">#1A1B22</color>
+    <color name="blue">#3772E7</color>
 </resources>
