--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ActivityBottomTextStyle">
+    <style name="ActivityBottomTextStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
@@ -48,5 +48,13 @@
     </style>
     <style name="SettingTextVievStyle">
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="searchTextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:drawableStart">@drawable/seach_black</item>
+    </style>
+    <style name="searchClearIcon">
+        <item name="android:src">@drawable/clear_darck_mode</item>
     </style>
 </resources>
