--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#AEAFB4</color>
+    <color name="light_gray">#E6E8EB</color>
     <color name="yp_black">#1A1B22</color>
     <color name="blue">#3772E7</color>
+    <color name="prime_neutral">#FFFFFFFF</color>
+    <color name="prime_positive">#228B22</color>
+    <color name="prime_negative">#FF0000</color>
 </resources>
