--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="ActivityBottomTextStyle">
+    <style name="ActivityBottomTextStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
@@ -13,6 +13,10 @@
         <item name="cornerRadius">20dp</item>
         <item name="iconGravity">textStart</item>
         <item name="iconTint">@color/black</item>
+    </style>
+    <style name="BottomStyle">
+        <item name="android:backgroundTint">@color/light_gray</item>
+        <item name="cornerRadius">20dp</item>
     </style>
     <style name="SettingBottomStyle" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:layout_width">match_parent</item>
@@ -49,6 +53,12 @@
     <style name="SettingTextVievStyle">
         <item name="android:textColor">@color/black</item>
     </style>
-
-
+    <style name="searchTextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:drawableStart">@drawable/search_image</item>
+    </style>
+    <style name="searchClearIcon">
+        <item name="android:src">@drawable/ic_menu_close_clear_cancel</item>
+    </style>
 </resources>
