--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".SearchActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
@@ -28,9 +23,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_gravity="left"
-            android:paddingLeft="60dp"
+            android:layout_gravity="center_vertical|end"
+            android:paddingStart="10dp"
             android:text="@string/app_search"
             style="@style/SettingTextVievStyle"
             android:textAllCaps="false"
@@ -38,7 +32,7 @@
             android:textStyle="bold"
             android:fontFamily="@font/ys_display_medium"
             android:textFontWeight="500" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/container"
@@ -71,6 +65,5 @@
         android:visibility="gone" />
 
     </FrameLayout>
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
