--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+    tools:context=".SettingsActivity"
+    style="@style/SettingBackgroundStyle"
+    android:orientation="vertical"
+    android:padding="2dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@style/SettingBackgroundStyle"
-        android:orientation="vertical"
-        android:padding="2dp">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48dp">
 
@@ -28,17 +24,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left"
-                android:paddingLeft="60dp"
+                android:layout_gravity="center_vertical|end"
                 android:text="@string/app_settings"
+                android:paddingStart="10dp"
                 style="@style/SettingTextVievStyle"
                 android:textAllCaps="false"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/ys_display_medium"
                 android:textFontWeight="500" />
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,6 +77,5 @@
                 app:icon="@drawable/arrow_forward" />
 
         </LinearLayout>
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
