--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,80 +2,80 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/SettingBackgroundStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity"
-    style="@style/SettingBackgroundStyle"
     android:orientation="vertical"
-    android:padding="2dp">
+    android:padding="2dp"
+    tools:context=".SettingsActivity">
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
+
+        <Button
+            android:id="@+id/backSettings"
+            style="@style/SettingBackgroundStyle"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            app:icon="@drawable/arrow_back" />
+
+        <TextView
+            style="@style/SettingTextVievStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:fontFamily="@font/ys_display_medium"
+            android:paddingStart="10dp"
+            android:text="@string/app_settings"
+            android:textAllCaps="false"
+            android:textFontWeight="500"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp">
-
-            <Button
-                style="@style/SettingBackgroundStyle"
-                android:id="@+id/backSettings"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                app:icon="@drawable/arrow_back"
-                android:paddingLeft="16dp" />
+            android:layout_height="@dimen/activity_setting_layout_height"
+            android:layout_marginTop="20dp"
+            android:gravity="start"
+            android:orientation="horizontal"
+            android:paddingLeft="12dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:text="@string/app_settings"
-                android:paddingStart="10dp"
-                style="@style/SettingTextVievStyle"
-                android:textAllCaps="false"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/ys_display_medium"
-                android:textFontWeight="500" />
-        </LinearLayout>
+                style="@style/SettingSwitchTextStyle"
+                android:text="@string/app_dark_style" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <FrameLayout
+            <Switch
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_setting_layout_height"
-                android:layout_marginTop="20dp"
-                android:gravity="start"
-                android:orientation="horizontal"
-                android:paddingLeft="12dp">
+                android:layout_height="match_parent"
+                android:layout_gravity="center" />
+        </FrameLayout>
 
-                <TextView
-                    style="@style/SettingSwitchTextStyle"
-                    android:text="@string/app_dark_style" />
+        <Button
+            android:id="@+id/shareBtm"
+            style="@style/SettingBottomStyle"
+            android:text="@string/app_share"
+            app:icon="@drawable/share" />
 
-                <Switch
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center" />
-            </FrameLayout>
+        <Button
+            android:id="@+id/supportBtm"
+            style="@style/SettingBottomStyle"
+            android:text="@string/app_mail_support"
+            app:icon="@drawable/support" />
 
-            <Button
-                android:id="@+id/shareBtm"
-                android:text="@string/app_share"
-                style="@style/SettingBottomStyle"
-                app:icon="@drawable/share" />
+        <Button
+            android:id="@+id/licenceBtm"
+            style="@style/SettingBottomStyle"
+            android:text="@string/user_licence"
+            app:icon="@drawable/arrow_forward" />
 
-            <Button
-                android:id="@+id/supportBtm"
-                android:text="@string/app_mail_support"
-                style="@style/SettingBottomStyle"
-                app:icon="@drawable/support" />
-
-            <Button
-                android:id="@+id/licenceBtm"
-                android:text="@string/user_licence"
-                style="@style/SettingBottomStyle"
-                app:icon="@drawable/arrow_forward" />
-
-        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
