Проделал поистене большую работу... Исправил манифест, подключил библиотеку Glide, создал viewHolder, подключил адаптер, подогнал макет...

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:layout_margin="5dp"
     android:orientation="vertical"
     tools:context=".SearchActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="48dp"
+        android:layout_margin="5dp">
 
         <Button
             android:id="@+id/backButton"
@@ -37,22 +38,23 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="16dp">
 
         <EditText
             android:id="@+id/inputEditText"
             style="@style/searchTextStyle"
+            android:background="@drawable/search_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/search_field"
             android:drawablePadding="12dp"
             android:hint="@string/app_search"
             android:inputType="text"
             android:maxLength="30"
             android:maxLines="1"
             android:padding="10dp"
-            android:paddingLeft="30dp" />
+            android:paddingLeft="30dp"
+            app:cornerRadius="40dp" />
 
         <ImageView
             android:id="@+id/clearIcon"
@@ -66,4 +68,19 @@
 
     </FrameLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTrack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
+            tools:listitem="@layout/treck_item" />
+
+    </LinearLayout>
 </LinearLayout>
