--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -53,8 +53,18 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/black</item>
         <item name="android:drawableStart">@drawable/seach_black</item>
+        <item name="android:background">@color/light_gray</item>
     </style>
     <style name="searchClearIcon">
         <item name="android:src">@drawable/clear_darck_mode</item>
+    </style>
+    <style name="greyAndWhiteText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="iconTintGreyWhite">
+    <item name="iconTint">@color/white</item>
+    </style>
+    <style name="backGroundGreyWhite">
+        <item name="android:background">@color/white</item>
     </style>
 </resources>
