--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,8 +57,18 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/grey</item>
         <item name="android:drawableStart">@drawable/search_image</item>
+        <item name="android:backgroundTint">@color/light_gray</item>
     </style>
     <style name="searchClearIcon">
         <item name="android:src">@drawable/ic_menu_close_clear_cancel</item>
+    </style>
+    <style name="greyAndWhiteText">
+        <item name="android:textColor">@color/grey</item>
+    </style>
+    <style name="iconTintGreyWhite">
+        <item name="iconTint">@color/grey</item>
+    </style>
+    <style name="backGroundGreyWhite">
+        <item name="android:background">@color/light_gray</item>
     </style>
 </resources>
