--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -44,6 +44,8 @@
         <EditText
             android:id="@+id/inputEditText"
             style="@style/searchTextStyle"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
             android:background="@drawable/search_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,7 +73,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTrack"
@@ -79,8 +82,51 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="5"
+            tools:itemCount="1"
             tools:listitem="@layout/treck_item" />
+
+        <ImageView
+            android:id="@+id/zaglushka_pustoi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/empty_mode"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="110dp"
+            android:visibility="gone"
+            />
+        <TextView
+            android:id="@+id/zaglushka_pustoi_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/error_not_found"
+            app:layout_constraintTop_toBottomOf="@+id/zaglushka_pustoi"
+            android:gravity="center"
+            android:fontFamily="@font/ys_display_medium"
+            android:textSize="19sp"
+            android:paddingTop="16dp"
+            android:visibility="gone"
+            style="@style/blackAndWhiteText"
+            />
+        <Button
+            android:id="@+id/zaglushka_inet_button"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:cornerRadius="54dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@id/zaglushka_pustoi_text"
+            style="@style/bottomBlackAndWhite"
+            android:text="@string/update"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:fontFamily="@font/ys_display_medium"
+            android:textAllCaps="false"
+            android:letterSpacing="0"
+            android:textAlignment="center"
+            android:visibility="gone"
+
+            />
 
     </LinearLayout>
 </LinearLayout>
