--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,10 +65,17 @@
     <style name="greyAndWhiteText">
         <item name="android:textColor">@color/grey</item>
     </style>
+    <style name="blackAndWhiteText">
+        <item name="android:textColor">@color/black</item>
+    </style>
     <style name="iconTintGreyWhite">
         <item name="iconTint">@color/grey</item>
     </style>
     <style name="backGroundGreyWhite">
         <item name="android:background">@color/light_gray</item>
+    </style>
+    <style name="bottomBlackAndWhite" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
