--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,23 +40,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <FrameLayout
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/themeSwitcher"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_setting_layout_height"
-            android:layout_marginTop="20dp"
-            android:gravity="start"
-            android:orientation="horizontal"
-            android:paddingLeft="12dp">
-
-            <TextView
-                style="@style/SettingSwitchTextStyle"
-                android:text="@string/app_dark_style" />
-
-            <Switch
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center" />
-        </FrameLayout>
+            android:layout_height="60dp"
+            android:layout_gravity="start"
+            android:layout_marginHorizontal="12dp"
+            android:text="@string/app_dark_style"
+            android:textSize="16sp"
+            app:thumbTint="@color/light_gray"
+            app:trackTint="@color/grey" />
 
         <Button
             android:id="@+id/shareBtm"
