--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,7 +14,7 @@
         android:layout_height="48dp">
 
         <Button
-            android:id="@+id/backSettings"
+            android:id="@+id/backSettingsBtm"
             style="@style/SettingBackgroundStyle"
             android:layout_width="48dp"
             android:layout_height="match_parent"
@@ -41,7 +41,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.switchmaterial.SwitchMaterial
-            android:id="@+id/themeSwitcher"
+            android:id="@+id/themeSw"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_gravity="start"
