--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,19 +15,17 @@
     <color name="prime_positive">#228B22</color>
     <color name="prime_negative">#FF0000</color>
 
-    <color name="background">#FF4F6FFF</color>
-    <color name="background_icon">#FFFFFF</color>
+    <color name="background">#000000</color>
+    <color name="background_icon">#000000</color>
     <color name="text_black">#FF000000</color>
-    <color name="text_color">#000000</color>
+    <color name="text_color">#FFFFFFFF</color>
     <color name="buton_background">#FFFFFFFF</color>
-    <color name="view_background">#FFFFFFFF</color>
     <color name="edit_text_dn">#EFEFEF</color>
-    <color name="color_switch_dn">#EDEFEF</color>
-    <color name="gray_500">#BCBCBC</color>
+    <color name="color_switch_dn">#FF4F6FFF</color>
+    <color name="gray_500">#6478DF</color>
     <color name="icon_search">#BCBCBC</color>
-    <color name="gray_black">#AEAFB4</color>
-    <color name="text_gray">#AEAFB4</color>
-    <color name="foregroundTint_gray">#736C6C</color>
+    <color name="view_background">#1E1E1E</color>
+    <color name="gray_black">#1A1B22</color>
 
     <color name="gray_player"> #AEAFB4</color>
 </resources>
