--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -131,6 +131,16 @@
 
     </LinearLayout>
 
+
+
+    <ProgressBar android:id="@+id/progressBar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone"/>
+
+
     <!--Блок для сохраненных кликнутых песен -->
     <LinearLayout
         android:id="@+id/group_clicked"
