Исправил большенство замечаний, кроме зависимости от application, и статичных строковых переменных.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -48,8 +48,8 @@
             android:layout_marginHorizontal="12dp"
             android:text="@string/app_dark_style"
             android:textSize="16sp"
-            app:thumbTint="@color/light_gray"
-            app:trackTint="@color/grey" />
+            app:thumbTint="@color/thumb_tint"
+            app:trackTint="@color/track_tint" />
 
         <Button
             android:id="@+id/shareBtm"
