--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -77,7 +77,7 @@
         android:layout_width="120dp"
         android:layout_height="100dp"
         android:layout_marginTop="@dimen/size_xs"
-        app:icon="@drawable/button_play_day"
+        app:icon="@drawable/button_play"
         app:iconSize="95dp"
         app:iconTint="@color/text_color"
         app:layout_constraintBottom_toBottomOf="@+id/iv_add"
