--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -153,9 +153,8 @@
 
     </LinearLayout>
 
-
-
     <ProgressBar android:id="@+id/progressBar"
+        android:layout_marginTop="150dp"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:layout_gravity="center"
@@ -209,6 +208,5 @@
             />
 
     </LinearLayout>
-
 
 </LinearLayout>
