--- a/app/src/main/res/layout/activity_mediateka.xml
+++ b/app/src/main/res/layout/activity_mediateka.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/size_l"
     android:paddingTop="@dimen/size_sl"
-    android:theme="@style/Theme.PlaylistMaker">
+    style="@style/MediatekaBackgroundStyle">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,6 +33,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
+        style="@style/MediatekaBackgroundStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabTextAppearance="@style/TextTabLayoutStyle"
