--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -105,4 +105,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="cornerRadius">54dp</item>
     </style>
+    <style name="MediatekaBackgroundStyle">
+        <item name="android:background">@color/mediateka_background_color</item>
+    </style>
 </resources>
