--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,26 +7,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="2dp"
-    tools:context=".setting.ui.SettingsActivity">
+    tools:context=".setting.ui.SettingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
-
-        <Button
-            android:id="@+id/backSettingsBtm"
-            style="@style/SettingBackgroundStyle"
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="16dp"
-            app:icon="@drawable/arrow_back" />
+        android:layout_height="80dp"
+        android:orientation="vertical">
 
         <TextView
             style="@style/SettingTextVievStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
+            android:layout_gravity="center_vertical|start"
             android:fontFamily="@font/ys_display_medium"
+            android:paddingTop="10dp"
             android:paddingStart="10dp"
             android:text="@string/app_settings"
             android:textAllCaps="false"
