--- a/app/src/main/res/layout/fragment_mediateka.xml
+++ b/app/src/main/res/layout/fragment_mediateka.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="@dimen/size_l"
+    android:paddingHorizontal="12dp"
     android:paddingTop="@dimen/size_sl"
-    style="@style/AllBackgroundStyle">
+    style="@style/AllBackgroundStyle"
+    tools:context="com.example.playlistmaker.main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/size_xxxs">
-
-
-        <Button
-            android:id="@+id/bt_back"
-            style="@style/SettingBackgroundStyle"
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="16dp"
-            app:icon="@drawable/arrow_back" />
+        android:paddingBottom="0dp"
+        android:layout_gravity="start">
 
         <TextView
             style="@style/TextStyleMediateca"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/mediateca"
             android:textAlignment="textStart" />
     </LinearLayout>
