--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,21 +6,15 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    tools:context=".search.ui.SearchActivity"
+    tools:context=".search.ui.SearchFragment"
     style="@style/AllBackgroundStyle">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        tools:ignore="UseCompoundDrawables">
 
-        <Button
-            android:id="@+id/backButton"
-            style="@style/SettingBackgroundStyle"
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:paddingLeft="16dp"
-            app:icon="@drawable/arrow_back" />
 
         <TextView
             style="@style/SettingTextVievStyle"
