--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,15 +106,15 @@
     </style>
 
     <style name="TextStyleMediateca">
-        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center</item>
+
         <item name="android:textColor">@color/black</item>
-        <item name="android:padding">8dp</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:textSize">22sp</item>
+
+        <item name="android:layout_marginStart">0dp</item>
     </style>
 
     <style name="TextTabLayoutStyle" parent="@android:style/TextAppearance.StatusBar.EventContent.Title">
